@@ -4,7 +4,7 @@ description: Découvrez comment effectuer une mise à niveau statique.
 topic-tags: upgrading
 feature: Upgrading
 exl-id: aef6ef00-993c-4252-b0ad-ddc4917beaf7
-source-git-commit: 64c9296554c55b539145dd59a14b2255b1750e47
+source-git-commit: 6d2b7e341dcdedf3c000b9fb0ecd21722bdf2a27
 workflow-type: tm+mt
 source-wordcount: '1256'
 ht-degree: 76%
@@ -187,7 +187,7 @@ Notez que le démarrage d’AEM à partir du script de démarrage ne lance pas l
 1. Modifiez la commande en remplaçant le chemin d’accès dans le fichier JAR existant (`crx-quickstart/app/aem-quickstart*.jar` dans ce cas) par le nouveau fichier JAR qui est un frère du dossier `crx-quickstart`. En prenant comme exemple notre commande précédente, notre commande serait la suivante :
 
    ```shell
-   /usr/bin/java -server -Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar cq-quickstart-6.5.0.jar -c crx-quickstart -p 4502 -Dsling.properties=conf/sling.properties
+   /usr/bin/java -server -Xmx1024m -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar cq-quickstart-6.5.0.jar -c crx-quickstart -p 4502 -Dsling.properties=conf/sling.properties
    ```
 
    Cela permet de s’assurer que tous les paramètres de mémoire appropriés, modes d’exécution personnalisés et autres paramètres d’environnement sont appliqués pour la mise à niveau. Une fois que la mise à niveau est terminée, l’instance peut être démarrée à partir du script de démarrage lors des démarrages ultérieurs.
